# biv-hack-1

./: Dockerfile  Makefile  README.md  cspell.yml  pyproject.toml
app/: infer.py
data/: sample.tsv
models/: logreg.pickle  tfidf-vectorizer.pickle
